2009-02-17  Antti Koivisto  <antti@apple.com>

        Reviewed by Dave Kilzer.

        <rdar://problem/6592446> dynamically updating page doesn't seem to draw when updated
        
        Need update after callback.

        * bindings/js/JSCustomPositionCallback.cpp:
        (WebCore::JSCustomPositionCallback::handleEvent):
        * bindings/js/JSCustomPositionErrorCallback.cpp:
        (WebCore::JSCustomPositionErrorCallback::handleEvent):

2009-02-17  Eric Carlson  <eric.carlson@apple.com>

        Reviewed by Antti Koivisto.

        https://bugs.webkit.org/show_bug.cgi?id=23917
        Allow a WebKit plug-in to act as a proxy for the <audio> and <video>
        element.

        * DerivedSources.make: add media element proxy exports to .exp file when feature is defined.

        * WebCore.VideoProxy.exp: New, define the informal protocol exported by a media element proxy.

        * WebCore.xcodeproj/project.pbxproj: Add MediaPlayerProxy.h.

        * html/HTMLMediaElement.cpp:
        (WebCore::HTMLMediaElement::HTMLMediaElement): Initialize m_needWidgetUpdate.
        (WebCore::HTMLMediaElement::attributeChanged): Don't detach+attach when PLUGIN_PROXY_FOR_VIDEO, the
        proxy plug-in handles the poster frame.
        (WebCore::HTMLMediaElement::rendererIsNeeded): New logic for PLUGIN_PROXY_FOR_VIDEO.
        (WebCore::HTMLMediaElement::createRenderer): Create RenderPartObject when PLUGIN_PROXY_FOR_VIDEO.
        (WebCore::HTMLMediaElement::attach): Set m_needWidgetUpdate when PLUGIN_PROXY_FOR_VIDEO
        (WebCore::HTMLMediaElement::load): Don't reallocate MediaPlayer when PLUGIN_PROXY_FOR_VIDEO, we keep the
        same plug-in for the life of the element.
        (WebCore::HTMLMediaElement::mediaPlayerNetworkStateChanged): update m_networkState when media player
        network state changes to EMPTY, otherwise we can get out of sync with engine.