@@ -69,6 +69,11 @@ public:
     ~FontPlatformData();
 
     FontPlatformData(const FontDescription&, const AtomicString&);
+    FontPlatformData(float size, bool bold, bool italic)
+    : m_fontState(UNINITIALIZED)
+    , m_font(0)
+    {
+    }
     
     FontPlatformData() 
     : m_fontState(UNINITIALIZED)
