@@ -1,3 +1,10 @@
+2009-02-17  Kevin Ollivier  <kevino@theolliviers.com>
+
+        wx build fix. Add missing constructor used for empty values.
+
+        * platform/graphics/wx/FontPlatformData.h:
+        (WebCore::FontPlatformData::FontPlatformData):
+
 2009-02-17  Antti Koivisto  <antti@apple.com>
 
         Reviewed by Dave Kilzer.
